# maskcomp

./: CMakeLists.txt  LICENSE.md  README.md  image_io.h  main.cc
image/: CMakeLists.txt
image/include/: image.h
image/src/: image_io.cc
